<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_fav_activity"
        android:icon="@drawable/ic_favorited_white"
        android:title="@string/favorite_activity"
        app:showAsAction="always">
    </item>
</menu>